# web-scraping

./: pyproject.toml  web_scraping.py
